--- a/src/App.css
+++ b/src/App.css
@@ -337,26 +337,34 @@ ul.topnav li.right {
   color: #007bff;
 }
 
+.message-box {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
 .message-box .error-text {
- margin-top: 10px;
+  margin-top: 10px;
+  margin-bottom: 10px;
   padding: 5px;
   background-color: rgba(255, 0, 0, 0.381);
   color: red;
   text-align: center;
-  
   font-size: 100%;
   border-radius: 5px;
+  width: 100%;
 }
-
-
 
 .message-box .success-text {
   margin-top: 20px;
+  margin-bottom: 10px;
   padding: 10px;
   background-color: #e0ffe0;
   color: #4caf50;
   text-align: center;
   border-radius: 5px;
+  width: 100%;
 }
 
 @media (max-width: 768px) {
