--- a/src/Profil.css
+++ b/src/Profil.css
@@ -16,7 +16,7 @@
   border-radius: 10px;
   box-shadow: 0 0 20px #000; /* Fekete keret */
   max-width: 90%; /* Maximális szélesség, hogy ne legyen túl széles mobilon */
-  width: 400px; /* Fix szélesség a nagyobb képernyők számára */
+  width: 500px; /* Fix szélesség a nagyobb képernyők számára */
   box-sizing: border-box; /* A padding nem növeli a szélességet */
 }
 
@@ -32,7 +32,7 @@ h1, p {
 }
 
 
-#alma,button::after{
+.alma, .alma button::after{
   padding: 10px 50px;
   font-size: 20px;
   border: none;
@@ -42,7 +42,7 @@ h1, p {
   position: relative;
 }
 
-#alma::after{
+.alma::after{
   --move1: inset(50% 50% 50% 50%);
   --move2: inset(31% 0 40% 0);
   --move3: inset(39% 0 15% 0);
@@ -60,7 +60,7 @@ h1, p {
 }
 
 
-#alma:hover::after{
+.alma:hover::after{
   animation: glitch_4011 1s;
   text-shadow: 10 10px 10px black;
   animation-timing-function: steps(2, end);
@@ -69,14 +69,77 @@ h1, p {
   border: 3px solid red; 
 }
 
-#alma:hover{
+.alma:hover{
   text-shadow: -1px -1px 0px red, 1px 1px 0px red;
 }
 
-#alma:hover{
+.alma:hover{
   background-color: transparent;
   border: 1px solid red;
   box-shadow: 0px 10px 10px -10px red;
+}
+
+.alma2, #alma2 button::after{
+  padding: 10px 50px;
+  font-size: 20px;
+  border: none;
+  border-radius: 5px;
+  color: black;
+  background-color: transparent;
+  position: relative;
+}
+
+.alma2::after{
+  --move1: inset(50% 50% 50% 50%);
+  --move2: inset(31% 0 40% 0);
+  --move3: inset(39% 0 15% 0);
+  --move4: inset(45% 0 40% 0);
+  --move5: inset(45% 0 6% 0);
+  --move6: inset(14% 0 61% 0);
+  clip-path: var(--move1);
+  content: 'Kijelentkezés';
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  display: block;
+}
+
+
+.alma2:hover::after{
+  animation: glitch_4011 1s;
+  text-shadow: 10 10px 10px grey;
+  animation-timing-function: steps(2, end);
+  text-shadow: -3px -3px 0px black, 3px 3px 0px white;
+  background-color: transparent;
+  border: 3px solid black; 
+}
+
+.alma2:hover{
+  text-shadow: -1px -1px 0px black, 1px 1px 0px black;
+}
+
+.alma2:hover{
+  background-color: transparent;
+  border: 1px solid black;
+  box-shadow: 0px 10px 10px -10px black;
+}
+
+.avatar-circle {
+  width: 60px;
+  height: 60px;
+  border-radius: 50%;
+  background-color: #740000;
+  color: white;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-weight: bold;
+  font-size: 24px;
+  text-transform: uppercase;
+  margin: 0 auto 20px auto;
+  box-shadow: 0 0 10px rgba(0,0,0,0.2);
 }
 
 @keyframes glitch_4011 {
