--- a/src/Profil.css
+++ b/src/Profil.css
@@ -32,7 +32,7 @@ h1, p {
 }
 
 
-.alma, .alma button::after{
+.alma1, .alma1 button::after{
   padding: 10px 50px;
   font-size: 20px;
   border: none;
@@ -42,7 +42,7 @@ h1, p {
   position: relative;
 }
 
-.alma::after{
+.alma1::after{
   --move1: inset(50% 50% 50% 50%);
   --move2: inset(31% 0 40% 0);
   --move3: inset(39% 0 15% 0);
@@ -60,7 +60,7 @@ h1, p {
 }
 
 
-.alma:hover::after{
+.alma1:hover::after{
   animation: glitch_4011 1s;
   text-shadow: 10 10px 10px black;
   animation-timing-function: steps(2, end);
@@ -69,11 +69,11 @@ h1, p {
   border: 3px solid red; 
 }
 
-.alma:hover{
+.alma1:hover{
   text-shadow: -1px -1px 0px red, 1px 1px 0px red;
 }
 
-.alma:hover{
+.alma1:hover{
   background-color: transparent;
   border: 1px solid red;
   box-shadow: 0px 10px 10px -10px red;
