--- a/src/Admin.css
+++ b/src/Admin.css
@@ -22,22 +22,20 @@
   font-size: 18px;
   font-weight: bold;
   cursor: pointer;
-  background-color: #860000; /* Kék háttér */
+  background-color: #860000; 
   color: white;
   border: none;
   border-radius: 5px;
   transition: all 0.3s ease;
-  box-shadow: 0px 4px 8px rgba(134, 0, 0, 0.5); /* Árnyék */
-}
+  box-shadow: 0px 4px 8px rgba(134, 0, 0, 0.5); 
 
 .gomb:hover {
-  background-color: #cb4a4ac5; /* Sötétebb kék hover esetén */
-  transform: translateY(-2px); /* Finom kiemelés */
+  background-color: #cb4a4ac5; 
+  transform: translateY(-2px);
 }
 
 .gomb:focus {
-  outline: none; /* Eltávolítja az alapértelmezett fókuszkeretet */
-  box-shadow: 0px 0px 10px rgba(134, 0, 0, 0.5); /* Erősebb árnyék */
+  box-shadow: 0px 0px 10px rgba(134, 0, 0, 0.5); 
 }
 
 .gomb.aktiv {
@@ -59,7 +57,7 @@
   border: 1px solid #000000;
   border-radius: 10px;
   background-color: #ffffff;
-  box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1); /* Árnyék a tartalom körül */
+  box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1); 
 }
 
 /* Szekciók stílusa */
